--- a/src/css/scss/base/_config.scss
+++ b/src/css/scss/base/_config.scss
@@ -6,6 +6,7 @@ $color-dark: #222421;
 $color-grey: #979797;
 $color-light: #ccc;
 $color-lighter: #e3e3e3;
+$color-lightest: #f0f0f0;
 $color-red: #b22d2d;
 
 /* SIZES */
