--- a/src/css/scss/molecules/_banner.scss
+++ b/src/css/scss/molecules/_banner.scss
@@ -6,11 +6,16 @@
     overflow:hidden;
     background:$color-dark;
 
+    body.in-app & {
+        height:120px;
+    }
+
     &__image {
     	position:absolute;
     	width:100%;
     	height:inherit;
     	background-size:cover;
+        background-position:center;
     	filter:blur(1px) opacity(50%);
     }
 
@@ -24,6 +29,17 @@
 	    	color:#FFF;
 	    	text-shadow:2px 2px 5px #000;
 	    	margin-bottom:10px;
+
+            &--2 {
+                body.in-app & {
+                    font-size:16px;
+                }
+            }
+            &--3 {
+                body.in-app & {
+                    font-size:12px;
+                }
+            }
 	    }
     }
     
