--- a/src/css/scss/organisms/_intro.scss
+++ b/src/css/scss/organisms/_intro.scss
@@ -5,35 +5,13 @@
 
     body.in-app & {
         margin:0;
-        padding-bottom:$height-nav-mobile;
+        padding-bottom:20px;
     }
 
-    &__head {
-        padding:10px;
-        border-bottom:1px solid $color-light;
-        margin-bottom:15px;
-        color:$color-grey;
-        font-family:"HelveticaNeue-Light","Roboto-Reg",Arial;
-        font-size:11px;
-        line-height:15px;
+    .heading {
+        width:92%;
+        margin-left:auto;   
     }
-
-    &__author {
-        display:block;
-    }
-
-	&__shares {
-		text-align:center;
-        margin-top:40px;
-
-        body.in-app & {
-            margin-top:20px;
-        }
-
-        body.is-webview & {
-            display:none;
-        }
-	}
 
     .paragraph {
         width:92%;
