--- a/src/css/scss/base/_layout.scss
+++ b/src/css/scss/base/_layout.scss
@@ -4,7 +4,7 @@ body {
         background:$color-white;
     }
     &.is-ready:not(.in-app) {
-        background:linear-gradient(to bottom, $color-light, $color-lighter);
+        background:linear-gradient(to bottom, $color-lightest, $color-white);
     }
 }
 
@@ -19,10 +19,9 @@ body {
     padding:20px 0;
     visibility:hidden;
     opacity:0;
+    overflow:hidden;
 
     body.in-app & {
-        margin-top:0;
-        padding:0;
         width:auto;
         max-width:initial;
         min-width:320px;
