--- a/src/css/scss/organisms/_cover.scss
+++ b/src/css/scss/organisms/_cover.scss
@@ -1,4 +1,4 @@
-.cover {
+﻿.cover {
     position:relative;
     overflow:hidden;
     text-align:center;
@@ -123,7 +123,7 @@
         }
 
         &:after {
-            content:"Demarrer l'experience";
+            content:"Démarrer l'expérience";
             position:fixed;
             width:100%;
             left:0;
@@ -131,7 +131,7 @@
             display:block;
             white-space:nowrap;
             font-family:'Roboto';
-            font-weight:500;
+            font-weight:400;
             font-size:14px;
             text-transform:uppercase;
 
