clean custom fileds, add mixtape link, add default SSI

--- a/src/css/scss/atoms/_paragraph.scss
+++ b/src/css/scss/atoms/_paragraph.scss
@@ -1,6 +1,6 @@
 .paragraph {
     font-family:'Roboto';
-    color:#000;
+    color:$color-dark;
     font-size:15px;
     line-height:20px;
     text-align:justify;
