--- a/src/css/scss/organisms/_article.scss
+++ b/src/css/scss/organisms/_article.scss
@@ -17,7 +17,6 @@
         text-align:center;
         padding:60px 0;
         width:calc(20% - 10px);
-        color:$color-grey;
 
         body.in-app & {
             width:25px;
@@ -33,15 +32,20 @@
             overflow:hidden;
             text-overflow:ellipsis;
             padding:15px 5px;
-            color:$color-white;
-            background:$color-dark;
-            border:1px solid $color-dark;
+            color:$color-grey;
+            background:$color-white;
+            transition: all linear 0.25s;
 
             body.in-app & {
                 display:none;
                 @media (min-width:$bp-phone) {
                     display:inline-block;
                 }
+            }
+
+            .article.is-active & {
+                color:$color-white;
+                background:$color-dark;
             }
         }
 
@@ -78,6 +82,8 @@
         padding:60px 0 0 0;
         width:70%;
         margin:0 5%;
+        opacity:0.7;
+        transition:opacity linear 0.25s;
 
         body.in-app & {
             float:none;
@@ -136,7 +142,7 @@
 
             .paragraph {
                 padding:30px 40px;
-                text-align:left;
+                text-align:justify;
 
                 body.in-app & {
                     padding:0 20px 10px 20px;
@@ -156,6 +162,13 @@
                     font-style:italic;
                     text-align:left;
                     font-size:16px;
+                }
+
+                a {
+                    color:$color-dark;
+                    &:hover {
+                        text-decoration:none;
+                    }
                 }
 
                 irame {
@@ -194,7 +207,38 @@
         .readmore {
             margin-top:15px;
         }
-        
+
+        article.is-active & {
+            opacity:1;
+        }
+    }
+
+    &__footerLink {
+        font-family:'Roboto';
+        font-weight:400;
+        font-style:italic;
+        font-size:14px;
+        display:block;
+        position:relative;
+        bottom:0;
+        left:0;
+        background:$color-grey;
+        color:$color-white;
+        text-decoration:none;
+        text-align:left;
+        padding:5px 10px;
+        &:hover {
+            text-decoration:underline;
+        }
+        &:before {
+            content:'\f04b';
+            font-family: FontAwesome;
+            display:inline-block;
+            font-size:12px;
+            color:$color-white;
+            margin-right:10px;
+            font-style:normal;
+        }
     }
 
     &:after {
