Editing link style in articles
Editing link style in articles

--- a/src/css/scss/organisms/_article.scss
+++ b/src/css/scss/organisms/_article.scss
@@ -165,7 +165,8 @@
                 }
 
                 a {
-                    color:$color-dark;
+                    color:$color-red;
+                    font-weight:bold;
                     &:hover {
                         text-decoration:none;
                     }
