--- a/src/css/scss/base/_config.scss
+++ b/src/css/scss/base/_config.scss
@@ -7,7 +7,11 @@ $color-grey: #979797;
 $color-light: #ccc;
 $color-lighter: #e3e3e3;
 $color-lightest: #eeeeee;
-$color-red: #b22d2d;
+$color-red: #448aff;
+$color-main: #448aff;
+/*
+$color-red: #b22d2d;*/
+
 
 /* SIZES */
 
