--- a/src/css/scss/organisms/_article.scss
+++ b/src/css/scss/organisms/_article.scss
@@ -165,7 +165,7 @@
                 }
 
                 a {
-                    color:$color-red;
+                    color:$color-main;
                     font-weight:bold;
                     &:hover {
                         text-decoration:none;
