--- a/src/css/scss/organisms/_footer.scss
+++ b/src/css/scss/organisms/_footer.scss
@@ -42,7 +42,7 @@
         a {
             text-decoration:none;
             &:hover img {
-                border-color:$color-red;
+                border-color:$color-main;
             }
         }
 
