--- a/src/css/scss/organisms/_header.scss
+++ b/src/css/scss/organisms/_header.scss
@@ -19,7 +19,7 @@
         top:50%;
         margin-left:20px;
         margin-top:-14px;
-        color:$color-red;
+        color:$color-main;
         font-size:28px;
         text-decoration:none;
         transition:color linear 0.1s;
@@ -37,8 +37,8 @@
     	display:inline-block;
         width:260px;
         height:100%;
-        background:url("../img/logo.png") no-repeat center;
-        background-size:auto 40%;
+        background:url("../img/logo-timeline-the-backpackerz.png") no-repeat center;
+        background-size: 50%;
     }
 
     &__shares {
