--- a/src/app/views/partials/footer_best-of-hip-hop-2015.html
+++ b/src/app/views/partials/footer_best-of-hip-hop-2015.html
@@ -1,31 +1,33 @@
-<h3 class="heading heading--1">Congrats !</h3>
-<h4 class="heading heading--2">Vous êtes arrivé au bout de ce classement</h4>
-<p class="paragraph paragraph--oneline">Si vous avez aimé cette expérience, parlez-en autour de vous...</p>
+<!-- <h3 class="heading heading--1">Congrats !</h3> -->
+
+<h4 class="heading heading--2">Si vous avez aimé cette rétrospective,<br>parlez-en autour de vous...</h4>
+<p class="paragraph paragraph--oneline"></p>
+<!-- <p class="paragraph paragraph--oneline">Si vous avez aimé cette rétrospective, parlez-en autour de vous...</p> -->
 
 <div class="footer__shares">
 	<div class="share" onclick="ga('send', 'event', 'share', 'click', 'footer buttons')">
 		<div class="fb-share-button" data-href="http://thebackpackerz.com/rewind-les-100-meilleurs-albums-de-rap-us-depuis-2000" data-layout="button_count"></div>
 	</div>
-	<div class="share" onclick="ga('send', 'event', 'share', 'click', 'footer buttons')">
+	<div  class="share" onclick="ga('send', 'event', 'share', 'click', 'footer buttons')">
 		<a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Les+100+meilleurs+albums+de+Rap+US+depuis+2000&url=http%3A%2F%2Fthebackpackerz.com%2Frewind-les-100-meilleurs-albums-de-rap-us-depuis-2000&via=TheBackPackerz">Tweet</a>
 	</div>
 	<div class="share" onclick="ga('send', 'event', 'share', 'click', 'footer buttons')">
 		<div class="g-plusone" data-href="http://thebackpackerz.com/rewind-les-100-meilleurs-albums-de-rap-us-depuis-2000" data-size="medium"></div>
 	</div>
 
-	<p class="paragraph paragraph--oneline">...et réagissez au classement sur Twitter avec le hashtag #TBPZRewind</p>
-	<div class="footer__timeline">
+	<!-- <p class="paragraph paragraph--oneline">...et réagissez aux événements retenus dans cette timeline sur Twitter avec le hashtag #TBPZ2015</p>
+	<div id="mixtape"  class="footer__timeline">
 		<a class="twitter-timeline" href="https://twitter.com/hashtag/TBPZRewind" data-widget-id="645589635423453188">Tweets sur #TBPZRewind</a>
-	</div>
+	</div> -->
 </div>
 
-<h4 class="heading heading--2">Ne partez pas les mains vides !</h4>
+<h4 class="heading heading--2">...Et ne partez pas les mains vides</h4>
 <div class="footer__flyer">
-	<p class="paragraph paragraph--oneline">Télécharger la mixtape REWIND qui retrace ce classement à travers une sélection de 100 morceaux.</p>
-	<a href="http://thebackpackerz.com/telecharger-la-mixtape-rewind-les-100-meilleurs-albums-de-rap-us-depuis-2000-by-the-backpackerz/" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'footer buttons')">
-		<img src="http://thebackpackerz.com/wp-content/uploads/2015/09/download-mixtape-rewind-les-100-meilleurs-albums-de-rap-us-depuis-2000.gif" alt="mixtape REWIND - les 100 meilleurs albums de rap US depuis 2000" />
+	<p class="paragraph paragraph--oneline">Téléchargez gratuitement la mixtape "2015" qui compile le meilleur du Hip-Hop de cette année passée en 1h de mix.</p>
+	<a href="http://bit.ly/pro-era-mixtape" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'footer buttons')">
+		<img src="http://thebackpackerz.com/wp-content/uploads/2016/01/2015-la-mixtape-best-of-hip-hop-2015-by-the-backpackerz-cover-V2.jpg" />
 	</a>
-	<a href="http://thebackpackerz.com/telecharger-la-mixtape-rewind-les-100-meilleurs-albums-de-rap-us-depuis-2000-by-the-backpackerz/" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'footer buttons')" class="button button--important">Télécharger la mixtape</a>
+	<a href="http://bit.ly/pro-era-mixtape" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'footer buttons')" class="button button--important">Télécharger la mixtape</a>
 </div>
 
 <!--<h4 class="heading heading--2">Et RDV au Batofar le 24 Septembre</h4>
@@ -45,6 +47,6 @@
 </div>
 <div class="footer__credits">
 	<h5 class="heading heading--3">Crédits</h5>
-	<p class="paragraph paragraph--oneline"><a href="https://fr.linkedin.com/in/raphaeldd" target="_blank">Raphaël</a> (Développement), <a href="https://www.behance.net/Kadenss" target="_blank">Bjorn</a> (Illustration), <a href="http://thebackpackerz.com/mix-fresh-touch-an-introduction-to-french-future-beat/" target="_blank">Gentle Rain</a> (Mix)</p>
-	<p class="paragraph paragraph--oneline">Et big up à DJ Psycut, Caroline Cassino, tous les rédacteurs, nos partenaires et tous ceux qui nous suivent de près ou de loin...</p>
+	<p class="paragraph paragraph--oneline"><a href="https://fr.linkedin.com/in/raphaeldd" target="_blank">Raphaël</a> (Développement), TBPZ Team (Illustration), <a href="https://www.facebook.com/GentleRainfezfr/?fref=ts" target="_blank">Gentle Rain</a> (Mix)</p>
+<!-- 	<p class="paragraph paragraph--oneline">Et big up à tous les rédacteurs, nos partenaires et tous ceux qui nous suivent de près ou de loin...</p> -->
 </div>
