--- a/src/app/views/partials/footer_best-of-hip-hop-2015.html
+++ b/src/app/views/partials/footer_best-of-hip-hop-2015.html
@@ -4,7 +4,7 @@
 <p class="paragraph paragraph--oneline"></p>
 <!-- <p class="paragraph paragraph--oneline">Si vous avez aimé cette rétrospective, parlez-en autour de vous...</p> -->
 
-<div class="footer__shares">
+<div id="mixtape" class="footer__shares">
 	<div class="share" onclick="ga('send', 'event', 'share', 'click', 'footer buttons')">
 		<div class="fb-share-button" data-href="http://thebackpackerz.com/rewind-les-100-meilleurs-albums-de-rap-us-depuis-2000" data-layout="button_count"></div>
 	</div>
@@ -16,7 +16,7 @@
 	</div>
 
 	<!-- <p class="paragraph paragraph--oneline">...et réagissez aux événements retenus dans cette timeline sur Twitter avec le hashtag #TBPZ2015</p>
-	<div id="mixtape"  class="footer__timeline">
+	<div  class="footer__timeline">
 		<a class="twitter-timeline" href="https://twitter.com/hashtag/TBPZRewind" data-widget-id="645589635423453188">Tweets sur #TBPZRewind</a>
 	</div> -->
 </div>
