--- a/src/app/views/partials/nav-g.html
+++ b/src/app/views/partials/nav-g.html
@@ -1,9 +1,9 @@
 <ul class="navG__list">
 	<li class="navG__item navG__item--home">
-		<a href="/" onclick="ga('send', 'event', 'navCat', 'click', 'nav buttons')" target="_blank">home</a>
+		<a href="/" onclick="ga('send', 'event', 'navCat', 'click', 'nav buttons')" target="_blank">The BackPackerz</a>
 	</li>
 	<li class="navG__item navG__item--rewind">
-		<a href="/rewind-les-100-meilleurs-albums-de-rap-us-depuis-2000" onclick="ga('send', 'event', 'navCat', 'click', 'nav buttons')" target="_blank">rewind</a>
+		<a href="#mixtape" onclick="ga('send', 'event', 'navCat', 'click', 'nav buttons')" target="_blank">2015 La Mixtape</a>
 	</li>
 	<li class="navG__item navG__item--{{item.slug}}"
 		ng-repeat="(index, item) in nav">
