--- a/src/css/scss/organisms/_navG.scss
+++ b/src/css/scss/organisms/_navG.scss
@@ -44,7 +44,10 @@
             height:100%;
             text-decoration:none;
             color:#FFF;
-
+            font-family: 'Roboto';
+            font-weight:900;
+            font-style: italic;
+            text-transform: uppercase;
             &:hover {
                 color:$color-red;
             }
@@ -58,8 +61,15 @@
         &--livre,
         &--mixes,
         &--non-classe,
-        &--non-classe-en {
+        &--non-classe-en,
+        &--lost-and-found,
+        &--news,
+        &--playlists, {
             display:none;
+        }
+
+        &--mixtape {
+            color: $color-main;
         }
     }
 }
