--- a/src/app/views/partials/footer_best-of-hip-hop-2015.html
+++ b/src/app/views/partials/footer_best-of-hip-hop-2015.html
@@ -25,7 +25,7 @@
 <div class="footer__flyer">
 	<p class="paragraph paragraph--oneline">Téléchargez gratuitement la mixtape "2015" qui compile le meilleur du Hip-Hop de cette année passée en 1h de mix.</p>
 	<a href="http://bit.ly/pro-era-mixtape" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'footer buttons')">
-		<img src="http://thebackpackerz.com/wp-content/uploads/2016/01/2015-la-mixtape-best-of-hip-hop-2015-by-the-backpackerz-cover-V2.jpg" />
+		<img src="../img/2015-la-mixtape-best-of-hip-hop-2015-by-the-backpackerz-cover.jpg" />
 	</a>
 	<a href="http://bit.ly/pro-era-mixtape" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'footer buttons')" class="button button--important">Télécharger la mixtape</a>
 </div>
@@ -40,7 +40,7 @@
 </div>-->
 
 <div class="footer__credits">
-	<p class="paragraph paragraph--oneline">Ce classement vous a été proposé par :</p>
+	<p class="paragraph paragraph--oneline">Ce classement vous a été proposé par</p>
 	<a href="http://thebackpackerz.com/" target="_blank">
 		<img src="http://thebackpackerz.com/wp-content/uploads/2015/09/logo-tbpz-V2-square-blk.png" alt="the backpakcerz" />
 	</a>
@@ -49,4 +49,6 @@
 	<h5 class="heading heading--3">Crédits</h5>
 	<p class="paragraph paragraph--oneline"><a href="https://fr.linkedin.com/in/raphaeldd" target="_blank">Raphaël</a> (Développement), TBPZ Team (Illustration), <a href="https://www.facebook.com/GentleRainfezfr/?fref=ts" target="_blank">Gentle Rain</a> (Mix)</p>
 <!-- 	<p class="paragraph paragraph--oneline">Et big up à tous les rédacteurs, nos partenaires et tous ceux qui nous suivent de près ou de loin...</p> -->
+<a href="http://thebackpackerz.com/wp-content/uploads/2015/09/CPRewind.pdf" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'footer buttons')" class="button button--secondary">Télécharger le dossier de presse</a>
 </div>
+
