Update Intro Text style
Update Intro Text style

--- a/src/css/scss/molecules/_banner.scss
+++ b/src/css/scss/molecules/_banner.scss
@@ -30,6 +30,7 @@
 	    	color:#FFF;
 	    	text-shadow:2px 2px 5px #000;
 	    	margin-bottom:10px;
+            padding: 0 10px;
 
             &--2 {
                 body.in-app & {
