Update Nav et Meta Content

--- a/src/app/views/partials/nav-g.html
+++ b/src/app/views/partials/nav-g.html
@@ -2,8 +2,8 @@
 	<li class="navG__item navG__item--home">
 		<a href="/" onclick="ga('send', 'event', 'navCat', 'click', 'nav buttons')" target="_blank">The BackPackerz</a>
 	</li>
-	<li class="navG__item navG__item--rewind">
-		<a href="#mixtape" onclick="ga('send', 'event', 'navCat', 'click', 'nav buttons')" target="_blank">2015 La Mixtape</a>
+	<li class="navG__item navG__item--mixtape">
+		<a href="#mixtape" onclick="ga('send', 'event', 'navCat', 'click', 'nav buttons')">2015 La Mixtape</a>
 	</li>
 	<li class="navG__item navG__item--{{item.slug}}"
 		ng-repeat="(index, item) in nav">
