--- a/src/app/views/partials/footer_best-of-hip-hop-2015.html
+++ b/src/app/views/partials/footer_best-of-hip-hop-2015.html
@@ -24,10 +24,10 @@
 <h4 class="heading heading--2">...Et ne partez pas les mains vides</h4>
 <div class="footer__flyer">
 	<p class="paragraph paragraph--oneline">Téléchargez gratuitement la mixtape "2015" qui compile le meilleur du Hip-Hop de cette année passée en 1h de mix.</p>
-	<a href="http://bit.ly/pro-era-mixtape" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'footer buttons')">
-		<img src="../img/2015-la-mixtape-best-of-hip-hop-2015-by-the-backpackerz-cover.jpg" />
+	<a href="thebackpackerz.com/Gentle_Rain_-_2015_La_Mixtape_(TheBackPackerz).zip" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'Télécharger la mixtape 2015')">
+		<img src="http://thebackpackerz.com/wp-content/uploads/2016/01/2015-la-mixtape-best-of-hip-hop-2015-by-the-backpackerz-cover.jpg" />
 	</a>
-	<a href="http://bit.ly/pro-era-mixtape" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'footer buttons')" class="button button--important">Télécharger la mixtape</a>
+	<a href="thebackpackerz.com/Gentle_Rain_-_2015_La_Mixtape_(TheBackPackerz).zip" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'Télécharger la mixtape 2015')" class="button button--important">Télécharger la mixtape</a>
 </div>
 
 <!--<h4 class="heading heading--2">Et RDV au Batofar le 24 Septembre</h4>
