--- a/src/app/views/partials/footer_best-of-hip-hop-2015.html
+++ b/src/app/views/partials/footer_best-of-hip-hop-2015.html
@@ -6,13 +6,13 @@
 
 <div id="mixtape" class="footer__shares">
 	<div class="share" onclick="ga('send', 'event', 'share', 'click', 'footer buttons')">
-		<div class="fb-share-button" data-href="http://thebackpackerz.com/rewind-les-100-meilleurs-albums-de-rap-us-depuis-2000" data-layout="button_count"></div>
+		<div class="fb-share-button" data-href="http://thebackpackerz.com/timeline/best-of-hip-hop-2015/" data-layout="button_count"></div>
 	</div>
 	<div  class="share" onclick="ga('send', 'event', 'share', 'click', 'footer buttons')">
-		<a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Les+100+meilleurs+albums+de+Rap+US+depuis+2000&url=http%3A%2F%2Fthebackpackerz.com%2Frewind-les-100-meilleurs-albums-de-rap-us-depuis-2000&via=TheBackPackerz">Tweet</a>
+		<a class="twitter-share-button" href="https://twitter.com/intent/tweet?text=Une+frise+chronologique+interactive+pour+revivre+le+meilleur+du+Hip-Hop+en+2015&url=http%3A%2F%2Fthebackpackerz.com%2Ftimeline%2Fbest-of-hip-hop-2015&via=TheBackPackerz">Tweet</a>
 	</div>
 	<div class="share" onclick="ga('send', 'event', 'share', 'click', 'footer buttons')">
-		<div class="g-plusone" data-href="http://thebackpackerz.com/rewind-les-100-meilleurs-albums-de-rap-us-depuis-2000" data-size="medium"></div>
+		<div class="g-plusone" data-href="http://thebackpackerz.com/timeline/best-of-hip-hop-2015/" data-size="medium"></div>
 	</div>
 
 	<!-- <p class="paragraph paragraph--oneline">...et réagissez aux événements retenus dans cette timeline sur Twitter avec le hashtag #TBPZ2015</p>
