--- a/src/app/views/partials/nav-g.html
+++ b/src/app/views/partials/nav-g.html
@@ -2,9 +2,9 @@
 	<li class="navG__item navG__item--home">
 		<a href="/" onclick="ga('send', 'event', 'navCat', 'click', 'nav buttons')" target="_blank">The BackPackerz</a>
 	</li>
-	<li class="navG__item navG__item--mixtape">
+<!-- 	<li class="navG__item navG__item--mixtape">
 		<a href="#mixtape" onclick="ga('send', 'event', 'navCat', 'click', 'nav buttons')">2015 La Mixtape</a>
-	</li>
+	</li> -->
 	<li class="navG__item navG__item--{{item.slug}}"
 		ng-repeat="(index, item) in nav">
 		<a ng-href="{{item.link}}" onclick="ga('send', 'event', 'navCat', 'click', 'nav buttons')" target="_blank" ng-bind-html="item.name | lowercase"></a>
