Adding Streaming link in footer

--- a/src/app/views/partials/footer_best-of-hip-hop-2015.html
+++ b/src/app/views/partials/footer_best-of-hip-hop-2015.html
@@ -28,6 +28,7 @@
 		<img src="http://thebackpackerz.com/wp-content/uploads/2016/01/2015-la-mixtape-best-of-hip-hop-2015-by-the-backpackerz-cover.jpg" />
 	</a>
 	<a href="http://thebackpackerz.com/Gentle_Rain_-_2015_La_Mixtape_(TheBackPackerz).zip" onclick="ga('send', 'event', 'download', 'click', 'Télécharger la mixtape 2015')" class="button button--important">Télécharger la mixtape</a>
+	<a href="https://soundcloud.com/the-backpackerz/2015-la-mixtape-the-backpackerz" target="_blank" onclick="ga('send', 'event', 'download', 'click', 'Streamer la mixtape 2015')"><p class="paragraph paragraph--altlink">Ecouter sur Soundcloud</p></a>
 </div>
 
 <!--<h4 class="heading heading--2">Et RDV au Batofar le 24 Septembre</h4>
